<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_lg">

    <EditText
        android:id="@+id/photoWeightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_current_bodyweight"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/photoPoseInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:hint="@string/hint_pose_tag"
        android:inputType="text" />

    <EditText
        android:id="@+id/photoNotesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:hint="@string/hint_notes_optional"
        android:inputType="text" />
</LinearLayout>
