<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoViewerActivity">

    <TextView
        android:id="@+id/viewerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:textAppearance="@style/App.Text.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewerPose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/App.Text.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewerDate" />

    <ImageView
        android:id="@+id/viewerImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_sm"
        android:contentDescription="@string/cd_progress_photo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/viewerWeightInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewerPose" />

    <LinearLayout
        android:id="@+id/compareLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_sm"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/viewerWeightInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewerPose">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/compareImageA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/cd_progress_photo"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/compareLabelA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/App.Text.Caption" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/compareImageB"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/cd_progress_photo"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/compareLabelB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/App.Text.Caption" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/viewerWeightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_md"
        android:layout_marginEnd="@dimen/space_md"
        android:hint="@string/hint_bodyweight"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/viewerNotesInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/viewerNotesInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_md"
        android:layout_marginEnd="@dimen/space_md"
        android:layout_marginBottom="@dimen/space_sm"
        android:hint="@string/hint_notes"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveMeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveMeta"
        style="@style/App.Button.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_md"
        android:layout_marginBottom="@dimen/space_sm"
        android:text="@string/action_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCompare"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCompare"
        style="@style/App.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginBottom="@dimen/space_sm"
        android:text="@string/action_compare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDeletePhoto"
        app:layout_constraintStart_toEndOf="@+id/btnSaveMeta" />

    <Button
        android:id="@+id/btnDeletePhoto"
        style="@style/App.Button.Text.Destructive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginEnd="@dimen/space_md"
        android:layout_marginBottom="@dimen/space_sm"
        android:text="@string/action_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCompare" />

</androidx.constraintlayout.widget.ConstraintLayout>
